--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ platforms/
 plugins/
 plugins/android.json
 plugins/ios.json
-www/
+www/build
+www/assets/fonts
+# www/
 $RECYCLE.BIN/
 
 .DS_Store
